Closed Bug 639910 Opened 14 years ago Closed 14 years ago

NoTraceJIT build is orange due to bug557070.js

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: paul.biggar, Assigned: paul.biggar)

Details

(Whiteboard: [fixed-in-tracemonkey])

Attachments

(1 file, 1 obsolete file)

$ ./js /Users/pbiggar/work/mozilla/fix_notracejit/js/src/jit-test/tests/jaeger/bug557070.js -m -j Assertion failure: !fp->hasCallObj() && !fp->hasArgsObj(), at ../jsinterp.cpp:648 Segmentation fault when configured with --enable-debug --disable-tracejit The test should fail with "Internal error: too much recursion" instead. Any suggestions where to look for this?
Looks like that assertion shouldn't trigger is ok is false. I changed it above too since it looks like it'll have the same problem. The correct error now appears.
Assignee: general → pbiggar
Attachment #517808 - Flags: review?(dvander)
When JS_CHECK_RECURSION uses goto error, the assertion doesn't hit.
Attachment #517808 - Attachment is obsolete: true
Attachment #517808 - Flags: review?(dvander)
Attachment #517840 - Flags: review?(dvander)
Attachment #517840 - Flags: review?(dvander) → review+
Whiteboard: [fixed-in-tracemonkey]
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: