Bug 639910 - JS_CHECK_RECURSION on !JS_TRACER path skipped |goto error|. (r=dvander)